# pages-converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pages_converter.py  pyproject.toml
examples/: sample.md  sample.txt
pages_converter/: __init__.py
scripts/: demo_converter.py
tests/: test_converter.py
